[package]
name = "vsthost"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>", "George Atkinson <geomyles@yahoo.co.uk>", "Andrew Numrich <anumrich@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = { git = "https://github.com/RustAudio/vst-rs.git" }
#vst2-sys = "0.2.0"
tuix = { git = "https://github.com/geom3trik/tuix.git", branch = "without_send" }
nfd = "0.0.4"
raw-window-handle = "0.3.3"
winit = "0.24.0"
winapi = "0.3.9"
ringbuf = "0.2.4"